[tool.poetry]
name = "rl-learing"
version = "0.1.0"
description = ""
authors = ["m-arasaki <masato.arasaki.forwork@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.2"

[tool.poetry.dev-dependencies]
pandas = "^1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
